--- a/index.html
+++ b/index.html
@@ -10,18 +10,12 @@
 <!-- partial:index.partial.html -->
 <div class="marquee">
     <ul class="marquee-content">
-      <li><i class="fab fa-github"></i></li>
-      <li><i class="fab fa-codepen"></i></li>
-      <li><i class="fab fa-free-code-camp"></i></li>
-      <li><i class="fab fa-dev"></i></li>
-      <li><i class="fab fa-react"></i></li>
-      <li><i class="fab fa-vuejs"></i></li>
-      <li><i class="fab fa-angular"></i></li>
-      <li><i class="fab fa-node"></i></li>
-      <li><i class="fab fa-wordpress"></i></li>
-      <li><i class="fab fa-aws"></i></li>
-      <li><i class="fab fa-docker"></i></li>
-      <li><i class="fab fa-android"></i></li>
+     <li><img class="icon" src="1.png" alt=""> </li>
+     <li><img class="icon" src="2.png" alt=""> </li>
+     <li><img class="icon" src="3.png" alt=""> </li>
+     <li><img class="icon" src="4.png" alt=""> </li>
+     <li><img class="icon" src="5.png" alt=""> </li>
+     <li><img class="icon" src="6.png" alt=""> </li>
     </ul>
   </div>
 <!-- partial -->
